--- a/style.css
+++ b/style.css
@@ -209,6 +209,8 @@ img {
 }
 .home__img {
   position: absolute;
+  top: 100px;
+  left: 700px;
   right: 0;
   bottom: 0;
   width: 260px;
@@ -232,6 +234,7 @@ img {
 }
 .button:hover {
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+  transform: translateY(-4px);
 }
 
 /* ===== ABOUT =====*/
@@ -248,6 +251,13 @@ img {
 .about__img img {
   width: 200px;
   border-radius: 0.5rem;
+}
+.about__img img:hover {
+  box-shadow: 0 0 10px blue; 
+
+  border: 2px solid blue; 
+
+  transition: all 0.3s ease;
 }
 
 /* ===== SKILLS =====*/
